--- a/environment.yml
+++ b/environment.yml
@@ -1,9 +1,27 @@
-name: wine-analysis
+name: base
 channels:
   - defaults
-  - conda-forge
 dependencies:
-  - python=3.9
-  - numpy
+  - python=3.12
+  - setuptools
+  - pip
+  - wheel
+  - anaconda-anon-usage
+  - anaconda-catalogs
+  - anaconda-client
+  - anaconda-project
+  - anaconda-navigator==2.6.4
+  - conda
+  - conda-build
+  - conda-content-trust
+  - conda-libmamba-solver
+  - conda-pack
+  - conda-package-handling
+  - conda-package-streaming
+  - conda-token
+  - typing_extensions
+  - ipykernel
+  - matplotlib
   - pandas
-  - scikit-learn
+  - flask
+prefix: /opt/anaconda3
