--- a/environment.yml
+++ b/environment.yml
@@ -1,27 +1,10 @@
-name: base
+name: test1026
 channels:
   - defaults
 dependencies:
-  - python=3.12
-  - setuptools
-  - pip
-  - wheel
-  - anaconda-anon-usage
-  - anaconda-catalogs
-  - anaconda-client
-  - anaconda-project
-  - anaconda-navigator==2.6.4
-  - conda
-  - conda-build
-  - conda-content-trust
-  - conda-libmamba-solver
-  - conda-pack
-  - conda-package-handling
-  - conda-package-streaming
-  - conda-token
-  - typing_extensions
+  - python=3.10
+  - numpy
   - ipykernel
-  - matplotlib
+  - conda
   - pandas
-  - flask
-prefix: /opt/anaconda3
+prefix: /opt/anaconda3/envs/test1026
