🔄 업로드: 최신 분석 결과 반영

--- a/environment.yml
+++ b/environment.yml
@@ -8,3 +8,5 @@ dependencies:
   - conda
   - pandas
 prefix: /opt/anaconda3/envs/test1026
+
+# 터미널 실행: conda env export --from-history > environment.yml
